# AddressStrip_Controller

./: .cproject  .gitignore  .gitmodules  .project  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/modules/: ESPNOW.c  ESPNOW.h  Periphery.c  Periphery.h  SPIFFS.c  SPIFFS.h  Settings.c  Settings.h
